feat: adding journey time calculation

--- a/template.yml
+++ b/template.yml
@@ -84,6 +84,7 @@ Resources:
       CodeUri: ./alexa-skill-lambda
       Environment:
         Variables:
+          NAVITIA_API_TOKEN: !Ref NavitiaApiToken
           DYNAMODB_TABLE_NAME: !Select [1, !Split ['/', !GetAtt SubwayMonitorDB.Arn]]
       Role: !Ref LilleTraficAlexaSkillLambdaRole
       Events:
