--- a/alexa-skill-lambda/package.json
+++ b/alexa-skill-lambda/package.json
@@ -12,7 +12,7 @@
     "ask-sdk-core": "^2.7.0",
     "ask-sdk-model": "^1.19.0",
     "aws-sdk": "^2.326.0",
-    "date-and-time": "*"
+    "axios": "^1.5.1"
   },
   "devDependencies": {
     "ask-sdk-local-debug": "^1.1.0"
